--- a/Services.html
+++ b/Services.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - JobVistar HR Consultancy</title>
+    <title>JobVistar HR Consultancy</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -175,5 +175,6 @@ body {
         transform: translateY(-8px);
         box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     }
+
 
  </style>
